<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_Outlets">Outlets</string>
    <string name="main_Blackout">Blackout</string>
    <string name="main_Settings">Settings</string>

    <string name="string_ON">ON</string>
    <string name="string_OFF">OFF</string>

    <string name="app_name">LV Home Control</string>
    <string name="action_settings">Settings</string>
    <string name="on_message">ON</string>
    <string name="off_message">OFF</string>
    <string name="room_living">Living Room</string>
    <string name="room_basement">Basement</string>
    <string name="room_bedroom">Bedroom</string>
    <string name="room_kitchen">Kitchen</string>
</resources>