<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/pad6"
    android:paddingLeft="@dimen/pad6"
    android:paddingRight="@dimen/pad6"
    android:paddingTop="@dimen/pad6"
    tools:context=".MainActivity" android:baselineAligned="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pad6" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.81"
            android:paddingLeft="@dimen/pad6"
            android:text="@string/room_living"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue25"
            android:textSize="@dimen/activity_horizontal_margin" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/custom_button"
            android:text="@string/on_message"
            android:textSize="@dimen/huge_button_text" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/custom_button"
            android:text="@string/off_message"
            android:textSize="@dimen/huge_button_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:padding="@dimen/pad6" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.81"
            android:paddingLeft="@dimen/pad6"
            android:text="@string/room_bedroom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue25" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/custom_button"
            android:text="@string/on_message"
            android:textSize="@dimen/huge_button_text" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/off_message"
            android:textSize="@dimen/huge_button_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:padding="@dimen/pad6" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.81"
            android:paddingLeft="@dimen/pad6"
            android:text="@string/room_kitchen"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue25" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/custom_button"
            android:text="@string/on_message"
            android:textSize="@dimen/huge_button_text" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/custom_button"
            android:text="@string/off_message"
            android:textSize="@dimen/huge_button_text" />

    </LinearLayout>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button" android:background="#a2ff64"/>
    <ToggleButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton"/>

</LinearLayout>
